NB #230478 fixed for 7.4 so can move ACLImpersonateHint to its proper home.